# APC-randomness

./: .Subject 1 - RNG.pptx.icloud  .gitignore  CMakeLists.txt  README.md  noise.pnm
drawings/: mersenne_twist_almost_complete.drawio  mersenne_twister_high_level.drawio  mersenne_twister_initialization.drawio  twister.tex
examples/: cpp11rand.cpp  gradient_noise_test1.cpp  linear_congruential.cpp  mersenne_twister.cpp  noise_mapper.cpp  noise_mapper.h  std_rand.cpp  std_rand_gradient_test.cpp  subtract_with_carry.cpp  subtract_with_carry_example.cpp
imgs/: .lcg_color.png.icloud  .mt_color.png.icloud  .rand_color.png.icloud  .swc_color.png.icloud
